# zero2prod

./: .gitlab-ci.yaml  Cargo.toml  docker-compose.yml
.github/workflows/: ci-cd.yaml  main.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
